--- a/foodtruck-frontend/src/app/app.component.html
+++ b/foodtruck-frontend/src/app/app.component.html
@@ -7,7 +7,15 @@
 </div>
 <ul>
   <li>
-    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
+    <h2>
+  Enter Your City:<br>
+  <input type="text" City="city"><br>
+  Enter Your Zipcode:<br>
+  <input type="number" Zipcode="75062">
+  <br>
+  <br>
+  <input type= "submit" value = "SUBMIT">
+</h2>
   </li>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
